--- a/index.html
+++ b/index.html
@@ -10,20 +10,25 @@
   <body>
     <header class="page-header">
 		<div class="container">
-			<p>Україна, місто Харків, т. +380----------.</p>
+			<p>Україна, місто Харків</p>
+			<a class="header-email" href="mailto:pilipchuk.vova2018@gmail.com">pilipchuk.vova2018@gmail.com</a>
+			<a class="header-phone" href="tel:+380---------">т. +380----------</a>
 		</div>
 	</header>
 
-    <section class="hero-image">
+    <section class="hero-image">	
 		<div class="container">
 			<h1 class="heading">Володимир А. Пилипчук</h1>
-			<p>Junior верстальщик</p>
+			<p>Junior верстальник</p>
 		</div>
     </section>
-
     <section class="intro">
 		<div class="container">
-			<h2 class="subheading">Давайте познакомимся</h2>
+			<h2 class="subheading">Давайте познайомимось</h2>
+			<figure class="user-image">
+				<img src="files/user_Wald2.jpg" height="536"
+					alt="Фото диво-верстальника">
+			</figure>
 			<h3>Пара слов о себе</h3>
 			<p>Текст с парой слов о себе.</p>
 			<h3>Чем могу быть полезен</h3>
@@ -33,11 +38,15 @@
 
     <section class="portfolio">
 		<div class="container">
-			<h2 class="subheading">Мои работы</h2>
+			<h2 class="subheading">Мої роботи</h2>
+			<figure class="project-image">
+				<img src="files/project.jpg" width="928" height="536"
+				alt="Cайт магазина товарів для дому">
+			</figure>
+			<h3>Магазин товарів для дому</h3>
+			<p>Мій перший сайт.</p>
+			<a class="button" href="source/project-gloevk/index.html">Передивитись сторінку</a>
 			
-			<h3>Магазин товаров для дома</h3>
-			<p>Мой первый сайт.</p>
-
 			<h3>Блог начинающего верстальщика</h3>
 			<p>Статический блог про обучение HTML и CSS.</p>
 		</div>
@@ -45,6 +54,8 @@
 
     <footer class="page-footer">
 		<div class="container">
+		<a class="footer-email" href="mailto:pilipchuk.vova2018@gmail.com">pilipchuk.vova2018@gmail.com</a>
+			<a class="footer-phone" href="tel:+380---------">т. +380----------</a>
 			<p>Pylypchuk & CO.</p>
 		</div>
     </footer>
